Bug 807058 - Expose thumbnail size capability and control properties. r=sotaro, r=jst