dom/camera/DOMCameraControl.cpp
@@ -26,6 +26,7 @@
 
 using namespace mozilla;
 using namespace mozilla::dom;
+using namespace mozilla::idl;
 
 NS_IMPL_CYCLE_COLLECTION_WRAPPERCACHE_2(nsDOMCameraControl, mDOMCapabilities, mWindow)
 
@@ -153,6 +154,83 @@ void
 nsDOMCameraControl::SetFocusAreas(JSContext* cx, JS::Handle<JS::Value> aFocusAreas, ErrorResult& aRv)
 {
   aRv = mCameraControl->SetFocusAreas(cx, aFocusAreas);
+}
+
+static nsresult
+GetSize(JSContext* aCx, JS::Value* aValue, const CameraSize& aSize)
+{
+  JS::Rooted<JSObject*> o(aCx, JS_NewObject(aCx, nullptr, nullptr, nullptr));
+  if (!o) {
+    return NS_ERROR_OUT_OF_MEMORY;
+  }
+
+  JS::Rooted<JS::Value> v(aCx);
+
+  v = INT_TO_JSVAL(aSize.width);
+  if (!JS_SetProperty(aCx, o, "width", v)) {
+    return NS_ERROR_FAILURE;
+  }
+  v = INT_TO_JSVAL(aSize.height);
+  if (!JS_SetProperty(aCx, o, "height", v)) {
+    return NS_ERROR_FAILURE;
+  }
+
+  *aValue = JS::ObjectValue(*o);
+  return NS_OK;
+}
+
+/* attribute any pictureSize */
+JS::Value
+nsDOMCameraControl::GetPictureSize(JSContext* cx, ErrorResult& aRv)
+{
+  JS::Rooted<JS::Value> value(cx);
+  
+  CameraSize size;
+  aRv = mCameraControl->Get(CAMERA_PARAM_PICTURESIZE, size);
+  if (aRv.Failed()) {
+    return value;
+  }
+
+  aRv = GetSize(cx, value.address(), size);
+  return value;
+}
+void
+nsDOMCameraControl::SetPictureSize(JSContext* cx, JS::Handle<JS::Value> aSize, ErrorResult& aRv)
+{
+  CameraSize size;
+  aRv = size.Init(cx, aSize.address());
+  if (aRv.Failed()) {
+    return;
+  }
+
+  aRv = mCameraControl->Set(CAMERA_PARAM_PICTURESIZE, size);
+}
+
+/* attribute any thumbnailSize */
+JS::Value
+nsDOMCameraControl::GetThumbnailSize(JSContext* cx, ErrorResult& aRv)
+{
+  JS::Rooted<JS::Value> value(cx);
+  
+  CameraSize size;
+  aRv = mCameraControl->Get(CAMERA_PARAM_THUMBNAILSIZE, size);
+  if (aRv.Failed()) {
+    return value;
+  }
+
+  aRv = GetSize(cx, value.address(), size);
+  return value;
+}
+void
+nsDOMCameraControl::SetThumbnailSize(JSContext* cx, JS::Handle<JS::Value> aSize, ErrorResult& aRv)
+{
+  CameraSize size;
+  aRv = size.Init(cx, aSize.address());
+  if (aRv.Failed()) {
+    return;
+  }
+
+  aRv = mCameraControl->Set(CAMERA_PARAM_THUMBNAILSIZE, size);
 }
 
 double
