dom/camera/FallbackCameraControl.cpp
@@ -25,10 +25,12 @@ public:
   const char* GetParameterConstChar(uint32_t aKey);
   double GetParameterDouble(uint32_t aKey);
   void GetParameter(uint32_t aKey, nsTArray<idl::CameraRegion>& aRegions);
+  void GetParameter(uint32_t aKey, idl::CameraSize& aSize);
   void SetParameter(const char* aKey, const char* aValue);
   void SetParameter(uint32_t aKey, const char* aValue);
   void SetParameter(uint32_t aKey, double aValue);
   void SetParameter(uint32_t aKey, const nsTArray<idl::CameraRegion>& aRegions);
+  void SetParameter(uint32_t aKey, const idl::CameraSize& aSize);
   nsresult GetVideoSizes(nsTArray<idl::CameraSize>& aVideoSizes);
   nsresult PushParameters();
 
@@ -105,6 +107,11 @@ nsFallbackCameraControl::GetParameter(uint32_t aKey, nsTArray<idl::CameraRegion>
 }
 
 void
+nsFallbackCameraControl::GetParameter(uint32_t aKey, idl::CameraSize& aSize)
+{
+}
+
+void
 nsFallbackCameraControl::SetParameter(const char* aKey, const char* aValue)
 {
 }
@@ -121,6 +128,11 @@ nsFallbackCameraControl::SetParameter(uint32_t aKey, double aValue)
 
 void
 nsFallbackCameraControl::SetParameter(uint32_t aKey, const nsTArray<idl::CameraRegion>& aRegions)
+{
+}
+
+void
+nsFallbackCameraControl::SetParameter(uint32_t aKey, const idl::CameraSize& aSize)
 {
 }
 
